--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,6 +23,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 31
+    namespace 'de.bytepark.autoorientation'
 
     defaultConfig {
         minSdkVersion 16
