--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.0" // Add Kotlin Gradle plugin
     }
 }
 
@@ -19,7 +20,9 @@ rootProject.allprojects {
     }
 }
 
+// Apply plugins
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android' // Apply the Kotlin plugin
 
 android {
     compileSdkVersion 31
@@ -31,5 +34,11 @@ android {
     }
     lintOptions {
         disable 'InvalidPackage'
+    }
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        jvmTarget = "17" // Set the JVM target to 1.8 or 17 as needed
     }
 }
